补齐算子/清洗任务查询接口参数
