# backend/services/data-cleaning-service/src/main/java/com/dataengine/cleaning/infrastructure/persistence/mapper/CleaningTaskMapper.java
@@ -8,7 +8,8 @@ import java.util.List;
 
 @Mapper
 public interface CleaningTaskMapper {
-    List<CleaningTask> findTasksByStatus(@Param("status") String status);
+    List<CleaningTask> findTasksByStatus(@Param("status") String status, @Param("keywords") String keywords,
+                                         @Param("size") Integer size, @Param("offset") Integer offset);
 
     CleaningTask findTaskById(@Param("taskId") String taskId);
 
